# intro-to-pyo3

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
notebooks/: intro.ipynb
notebooks/casts/: maturin.cast
scripts/: image_exploration.py  py_mix_conv.py  rs_conv.py  rs_mix_conv.py  sobel.py
sobel_py/: __init__.py  filters.py
sobel_rs/: Cargo.toml  pyproject.toml
sobel_rs/sobel_rs/: __init__.py
sobel_rs/src/: lib.rs
