[project]
authors = [{name = "Murilo Cunha", email = "murilo.kuniyoshi@hotmail.com"}]
dependencies = [
    "maturin>=1.3.0",
    "numpy>=1.26.0",
    "imageio>=2.31.5",
    "matplotlib>=3.8.0",
]
description = "Calling Rust from Python: A Gentle Introduction to PyO3"
dynamic = ["version"]
license = {text = "MIT"}
name = "sobel-py"
readme = "README.md"
requires-python = ">=3.12,<3.13"

[project.optional-dependencies]
nb = [
    "ipykernel>=6.26.0",
    "pygments>=2.16.1",
    "jupyterlab>=4.0.7",
    "jupyterlab-rise>=0.41.0",
]
[build-system]
build-backend = "pdm.backend"
requires      = ["pdm-backend"]

[tool.pdm]
version = {source = "file", path = "sobel_py/__init__.py"}

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.5.0",
]

[tool.pdm.scripts]
lint = "pre-commit run --hook-stage pre-push --all-files"

[tool.ruff]
fix            = true
force-exclude  = true
ignore         = ["ANN401", "EM", "D203", "D212", "TRY003"]
select         = ["ALL"]
target-version = "py312"

[tool.ruff.per-file-ignores]
"scripts/*" = ["INP001"]
