[build-system]
build-backend = "maturin"
requires      = ["maturin>=1.3,<2.0"]

[project]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy>=1.26.0"]
dynamic = ["version"]
name = "sobel_rs"
requires-python = ">=3.7"

[tool.maturin]
features = ["pyo3/extension-module"]
